--- a/01_python_basics/notebooks/data_types.ipynb
+++ b/01_python_basics/notebooks/data_types.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "id": "4dc05371",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "id": "62212478",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "id": "3391b17b",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "id": "cf2b9684",
    "metadata": {},
    "outputs": [
@@ -117,8 +117,18 @@
       "addition >  13\n",
       "floor division >  3\n",
       "absolute value >  5\n",
-      "exponentiation >  1000\n",
-      "real & imaginary parts >  20.0 3.0\n"
+      "exponentiation >  1000\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'c' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[84], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexponentiation > \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mpow\u001b[39m(a, b)) \u001b[38;5;66;03m# Using pow(): raises a to the power of b (10^3 = 1000)\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Assuming c is defined as a complex number, e.g., c = 2 + 3j\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreal & imaginary parts > \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mc\u001b[49m\u001b[38;5;241m.\u001b[39mreal, c\u001b[38;5;241m.\u001b[39mimag)  \n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Prints real and imaginary parts of complex number c separately (2.0 and 3.0)\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'c' is not defined"
      ]
     }
    ],
@@ -146,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "0c9a5326",
    "metadata": {},
    "outputs": [
@@ -174,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "486677bc",
    "metadata": {},
    "outputs": [
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "4eb778be",
    "metadata": {},
    "outputs": [
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "1de5395f",
    "metadata": {},
    "outputs": [
@@ -261,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "ab4ce526",
    "metadata": {},
    "outputs": [
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "5dfc0da6",
    "metadata": {},
    "outputs": [
@@ -326,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1b51fb6",
    "metadata": {},
    "outputs": [
@@ -360,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f9117bfb",
    "metadata": {},
    "outputs": [
@@ -390,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "5fda7230",
    "metadata": {},
    "outputs": [
@@ -418,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "3430a9e7",
    "metadata": {},
    "outputs": [],
@@ -431,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "23b02be8",
    "metadata": {},
    "outputs": [
@@ -462,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "7df1431f",
    "metadata": {},
    "outputs": [
@@ -492,6 +502,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c209c26",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[80], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "55953ac6",
    "metadata": {},
@@ -501,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "838bf4cb",
    "metadata": {},
    "outputs": [
@@ -523,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "e2bc1d8f",
    "metadata": {},
    "outputs": [
@@ -557,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "0f562172",
    "metadata": {},
    "outputs": [
@@ -576,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "361616ba",
    "metadata": {},
    "outputs": [
@@ -598,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "cebdd850",
    "metadata": {},
    "outputs": [
