--- a/01_python_basics/notebooks/data_types.ipynb
+++ b/01_python_basics/notebooks/data_types.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "id": "4dc05371",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "id": "62212478",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "id": "3391b17b",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "cf2b9684",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[84], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexponentiation > \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mpow\u001b[39m(a, b)) \u001b[38;5;66;03m# Using pow(): raises a to the power of b (10^3 = 1000)\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Assuming c is defined as a complex number, e.g., c = 2 + 3j\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreal & imaginary parts > \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mc\u001b[49m\u001b[38;5;241m.\u001b[39mreal, c\u001b[38;5;241m.\u001b[39mimag)  \n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Prints real and imaginary parts of complex number c separately (2.0 and 3.0)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[15], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexponentiation > \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mpow\u001b[39m(a, b)) \u001b[38;5;66;03m# Using pow(): raises a to the power of b (10^3 = 1000)\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Assuming c is defined as a complex number, e.g., c = 2 + 3j\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreal & imaginary parts > \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mc\u001b[49m\u001b[38;5;241m.\u001b[39mreal, c\u001b[38;5;241m.\u001b[39mimag)  \n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Prints real and imaginary parts of complex number c separately (2.0 and 3.0)\u001b[39;00m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'c' is not defined"
      ]
     }
@@ -502,28 +502,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c209c26",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[80], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "55953ac6",
    "metadata": {},
@@ -567,7 +545,9 @@
       "dhi\n",
       "arsimjarihd\n",
       "False\n",
-      "dhirajmisra\n"
+      "dhirajmisra\n",
+      "straße\n",
+      "strasse\n"
      ]
     }
    ],
@@ -576,7 +556,92 @@
     "print(name[0:3])          # slicing\n",
     "print(name[::-1])         # reverse\n",
     "print(\"Py\" in name)       # substring check\n",
-    "print(name.replace(\"Py\", \"My\"))"
+    "print(name.replace(\"Py\", \"My\"))\n",
+    "\n",
+    "print(\"Straße\".lower())     # 'straße'\n",
+    "print(\"Straße\".casefold())  # 'strasse'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69fa6d5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyt nohtyp\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a string variable 's' and assign it the value \"python\"\n",
+    "s = \"python\"\n",
+    "\n",
+    "# Print two values:\n",
+    "# 1. s[0:3] - Slice from index 0 to 2 (0-inclusive, 3-exclusive), which gives 'pyt'\n",
+    "# 2. s[::-1] - Slice the entire string in reverse order (step = -1), which gives 'nohtyp'\n",
+    "print(s[0:3], s[::-1])  # Output: 'pyt' 'nohtyp'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43690a08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "['a', 'b']\n",
+      "x-y\n",
+      "Hi Ava!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Intermediate\n",
+    "\n",
+    "print(\"Py\" in \"Python\")          # True (O(n))\n",
+    "print(\"a,b\".split(\",\"))          # ['a','b']\n",
+    "print(\"-\".join([\"x\",\"y\"]))       # 'x-y' (join is O(n))\n",
+    "print(f\"Hi {'Ava'}!\")            # f-strings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13f5650e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Advance\n",
+    "\n",
+    "import unicodedata  # Unicode normalization tools\n",
+    "\n",
+    "def norm(u):\n",
+    "    # Normalize Unicode to NFC and apply case folding for consistent comparisons\n",
+    "    return unicodedata.normalize(\"NFC\", u).casefold()\n",
+    "\n",
+    "# Using 'Strabe' (with 'b') will NOT match 'STRASSE'\n",
+    "# Because 'b' is not the same as 'ß', even after casefolding\n",
+    "print(norm(\"Strabe\") == norm(\"STRASSE\"))  # False ❌\n",
+    "\n",
+    "# This works because 'ß' casefolds to 'ss'\n",
+    "print(norm(\"Straße\") == norm(\"STRASSE\"))  # True ✅\n"
    ]
   },
   {
@@ -616,7 +681,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['apple', 'banana', 'cherry', 'mango']\n"
+      "['apple', 'banana', 'cherry', 'mango', 'mango', 'mango']\n"
      ]
     }
    ],
@@ -624,27 +689,29 @@
     "# append\n",
     "\n",
     "fruits.append(\"mango\")\n",
-    "\n",
-    "print(fruits)"
+    "print(fruits)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "cebdd850",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'cherry', 'mango']\n"
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# remove\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mfruits\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbanana\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(fruits)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
      ]
     }
    ],
    "source": [
     "# remove\n",
-    "\n",
     "fruits.remove(\"banana\")\n",
     "print(fruits)"
    ]
@@ -654,13 +721,215 @@
    "execution_count": null,
    "id": "dbe59b40",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3]      # Create a list with initial elements [1, 2, 3]\n",
+    "nums.append(4)        # Append the number 4 to the end of the list → [1, 2, 3, 4]\n",
+    "nums[0] = 99          # Update the first element (index 0) to 99 → [99, 2, 3, 4]\n",
+    "\n",
+    "print(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "34434d6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[99, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example with simple (immutable) items:\n",
+    "\n",
+    "a = [1,2,3]\n",
+    "b = a[:]  #shallow copy\n",
+    "\n",
+    "\n",
+    "b[0] = 99\n",
+    "\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5f999e5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Advanced\n",
+    "\n",
+    "import copy  # Import the copy module to use copy and deepcopy functions\n",
+    "\n",
+    "nested = [[1], [2]]  # A nested list: two inner lists inside an outer list\n",
+    "\n",
+    "alias = nested  # alias points to the same object as nested (no copy, just a new reference)\n",
+    "\n",
+    "nested[0].append(9)  # Modifies the first inner list by adding 9 → nested becomes [[1, 9], [2]]\n",
+    "                    # Since alias points to the same list, alias also sees this change\n",
+    "\n",
+    "deep = copy.deepcopy(nested)  # Creates a completely independent deep copy of nested\n",
+    "                              # deep = [[1, 9], [2]] — any future changes to nested won't affect deep\n",
+    "\n",
+    "nested[1].append(8)  # Appends 8 to the second inner list of nested → nested becomes [[1, 9], [2, 8]]\n",
+    "                    # deep remains unchanged → [[1, 9], [2]]\n",
+    "\n",
+    "# Ordered deduplication:\n",
+    "unique = list(dict.fromkeys([\"a\", \"b\", \"a\", \"c\", \"b\"]))  \n",
+    "# dict.fromkeys(...) removes duplicates while preserving insertion order\n",
+    "# Resulting dict: {'a': None, 'b': None, 'c': None}\n",
+    "# list(...) converts the keys of the dict back into a list → ['a', 'b', 'c']\n",
+    "\n",
+    "print(unique)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e14fda70",
+   "metadata": {},
+   "source": [
+    "#### **_Tuple — tuple (immutable, ordered)_**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "81c4e4b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = (10, 20, 30)    # A tuple with three elements\n",
+    "single = (42,)      # A tuple with one element (Note the comma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f856f8e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a gets the first element: =  1\n",
+      "b gets the last element: =  6\n",
+      "*mid gets the last element: =  [2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Intermediate\n",
+    "\n",
+    "x,y,z = (1,2,3)\n",
+    "\n",
+    "a, *mid,b = (1,2,3,4,5,6)\n",
+    "\n",
+    "\n",
+    "print(\"a gets the first element: = \",a)\n",
+    "print(\"b gets the last element: = \",b)\n",
+    "print(\"*mid gets the last element: = \",mid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66a3ac06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "c893fbb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 1): 'A-B'}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# advanced\n",
+    "\n",
+    "from collections import namedtuple\n",
+    "\n",
+    "Point = namedtuple(\"Point\",\"x y\")\n",
+    "edges = {(0,1): \"A-B\"}\n",
+    "\n",
+    "edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "ff8b9f3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instead of saying “position 0” or “position 1”, you can say .x or .y. Easier to understand.\n",
+    "\n",
+    "from collections import namedtuple\n",
+    "Point = namedtuple(\"Point\", \"x y z\")   \n",
+    "p = Point(3, 4,5) \n",
+    "print(p.x)  # Output: 3\n",
+    "print(p.y)  # Output: 4\n",
+    "print(p.z)  # Output: 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff483e1d",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bf98197",
+   "id": "1a17d371",
    "metadata": {},
    "outputs": [],
    "source": []
